fix gap in form_elements

--- a/src/pages/ui_kit/form_elements/form_elements.scss
+++ b/src/pages/ui_kit/form_elements/form_elements.scss
@@ -5,7 +5,7 @@
 
   display: grid;
   grid-template-columns: minmax(374px, 1.16875fr) repeat(auto-fit, minmax(320px, 1fr));
-  grid-gap: max(0px, calc(15vw - 144px));
+  grid-gap: min(7.2rem, calc(15vw - 144px));
 
 
   &__double{
